Fix #62: Improve and cleanup m2 and p2 build, add test execution (#67)
* Fix #62: Improve and cleanup m2 and p2 build, add test execution

Maven
- Extract versions into properties
- Run test cases in m2 and p2 build
- Let pom files reflect directory structure
- Automatically download non-target platform jars into 'lib' directory
- Update to Eclipse repository 2020-09 for update site

Target Platform
- Fix Jetty version for stability and faster target platform resolution

- Enhance Checkstyle
-- Allow method names with '_' in test files
-- Allow protected fields as we are a framework targeting extensibility

- Jenkins
-- Record JUnit test cases
-- Record Checkstyle issues

- Fix wrong header for newly created files
- Fix missing logging configuration for example
- Fix test cases
-- Downgrade to Javalin 3.1.0 to avoid mocking problem

Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>