@@ -1,58 +1,86 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.eclipse.emfcloud.modelserver</groupId>
-	<artifactId>org.eclipse.emfcloud.modelserver.releng.target</artifactId>
-	<version>0.7.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+   <parent>
+      <groupId>org.eclipse.emfcloud.modelserver</groupId>
+      <artifactId>org.eclipse.emfcloud.modelserver.parent</artifactId>
+      <version>0.7.0-SNAPSHOT</version>
+      <relativePath>..</relativePath>
+   </parent>
+   <artifactId>org.eclipse.emfcloud.modelserver.tests.parent</artifactId>
+   <packaging>pom</packaging>
 
-	<modules>
-		<module>org.eclipse.emfcloud.modelserver.client.tests</module>
-		<module>org.eclipse.emfcloud.modelserver.common.tests</module>
-		<module>org.eclipse.emfcloud.modelserver.edit.tests</module>
-		<module>org.eclipse.emfcloud.modelserver.emf.tests</module>
-		<module>org.eclipse.emfcloud.modelserver.tests</module>
-	</modules>
+   <modules>
+      <module>org.eclipse.emfcloud.modelserver.client.tests</module>
+      <module>org.eclipse.emfcloud.modelserver.common.tests</module>
+      <module>org.eclipse.emfcloud.modelserver.edit.tests</module>
+      <module>org.eclipse.emfcloud.modelserver.tests</module>
+   </modules>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>1.3</version>
-				<configuration>
-					<dependency-resolution>
-						<extraRequirements>
-							<requirement>
-								<type>p2-installable-unit</type>
-								<id>org.eclipse.equinox.ds</id>
-								<versionRange>0.0.0</versionRange>
-							</requirement>
-						</extraRequirements>
-					</dependency-resolution>
-				</configuration>
-			</plugin>
+   <profiles>
+      <profile>
+         <id>m2</id>
 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>1.3</version>
-				<configuration>
-					<useUIHarness>false</useUIHarness>
-					<useUIThread>true</useUIThread>
-					<includes>
-						<!-- Default entries -->
-						<include>**/Test*.java </include>
-						<include>**/*Test.java</include>
-						<include>**/*TestCase.java</include>
-						<!-- Custom entries -->
-						<include>**/*Tests.java</include>
-					</includes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+         <!-- mockito cannot properly mock some classes so tests fail in p2 -->
+         <modules>
+            <module>org.eclipse.emfcloud.modelserver.emf.tests</module>
+         </modules>
+
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <version>${maven.surefire.version}</version>
+                  <configuration>
+                     <argLine>--illegal-access=permit</argLine>
+                     <includes>
+                        <!-- Default entries -->
+                        <include>**/Test*.java </include>
+                        <include>**/*Test.java</include>
+                        <include>**/*TestCase.java</include>
+                        <!-- Custom entries -->
+                        <include>**/*Tests.java</include>
+                     </includes>
+                  </configuration>
+               </plugin>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven.failsafe-plugin</artifactId>
+                  <version>${maven.failsafe.version}</version>
+                  <configuration>
+                     <argLine>--illegal-access=permit</argLine>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+
+      <profile>
+         <id>p2</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.eclipse.tycho</groupId>
+                  <artifactId>tycho-surefire-plugin</artifactId>
+                  <version>${tycho.version}</version>
+                  <configuration>
+                     <useUIHarness>false</useUIHarness>
+                     <useUIThread>true</useUIThread>
+                     <includes>
+                        <!-- Default entries -->
+                        <include>**/Test*.java </include>
+                        <include>**/*Test.java</include>
+                        <include>**/*TestCase.java</include>
+                        <!-- Custom entries -->
+                        <include>**/*Tests.java</include>
+                     </includes>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>
 
 </project>
